--- a/module.xcconfig
+++ b/module.xcconfig
@@ -10,7 +10,7 @@
 //
 // How to add a Framework (example)
 //
-// OTHER_LDFLAGS=$(inherited) -framework Foo
+OTHER_LDFLAGS=$(inherited) -framework UIKit -framework Foundation -framework QuartzCore -framework CoreVideo -framework CoreMedia -framework CoreGraphics -framework AVFoundation -framework OpenGLES -framework Security -lstdc++ -liconv
 //
 // Adding a framework for a specific version(s) of iPhone:
 //
