--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,6 @@
 	<classpathentry kind="lib" path="/Library/Application Support/Titanium/mobilesdk/osx/2.1.3.GA/android/js.jar"/>
 	<classpathentry kind="lib" path="/Library/Application Support/Titanium/mobilesdk/osx/2.1.3.GA/android/kroll-common.jar"/>
 	<classpathentry kind="lib" path="/Library/Application Support/Titanium/mobilesdk/osx/2.1.3.GA/android/kroll-apt.jar"/>
-	<classpathentry kind="lib" path="/Users/zpapp/Projects/LogicalLabs/titanium_mobile_modules/android/redlaser/lib/redlasersdk.jar"/>
+	<classpathentry kind="lib" path="lib/redlasersdk.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
