--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-android/build
-ios/build
+.DS_Store
+tmp
+bin
+build
+dist
+*.zip
+*/*/modules
+*/*/modules*
+.apt_generated
+build.properties
+.gitignore
+.svn
+*.pyc
+*~.nib/
+*.pbxuser
+*.perspective
+*.perspectivev3
+*.xcworkspace/
+xcuserdata
+*.xcuserstate
+*.xcuserdata*
+.idea/
+libs/
