--- a/ios/module.xcconfig
+++ b/ios/module.xcconfig
@@ -10,7 +10,7 @@
 //
 // How to add a Framework (example)
 //
-OTHER_LDFLAGS=$(inherited) -framework UIKit -framework Foundation -framework QuartzCore -framework CoreVideo -framework CoreMedia -framework CoreGraphics -framework AVFoundation -framework OpenGLES -framework Security -lstdc++ -liconv
+OTHER_LDFLAGS=$(inherited) -framework UIKit -framework Foundation -framework QuartzCore -framework CoreVideo -framework CoreMedia -framework CoreGraphics -framework AVFoundation -framework OpenGLES -framework Security -lstdc++.6.0.9 -liconv
 //
 // Adding a framework for a specific version(s) of iPhone:
 //
